[package]
name = "bundle_bundle"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "ergonomics", "games", "bundle", "ecs"]
categories = ["game-development"]
readme = "README.md"
description = "bundle bundles in a chain"
repository = "https://github.com/ickshonpe/bundle_bundle"

[dependencies]
bevy = { version = "0.9", default-features = false }

[dev-dependencies]
bevy = "0.9"